<resources>
    <string name="app_name">Aliyah AlTukhaifi-191488</string>
    <string name="delete_data">Delete Data</string>
    <string name="userid">UserID</string>
    <string name="delete">Delete</string>
    <string name="weather">Weather</string>
    <string name="_35">35</string>
    <string name="temperature">Temperature</string>
    <string name="city">city</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm">Confirm</string>
    <string name="email_address">Email Address</string>
    <string name="insert_information_in_the_firebase">Insert information in the firebase</string>
    <string name="user_id">User ID:</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="update_data">Update Data</string>
    <string name="user_id">User ID:</string>
    <string name="name">Name:</string>
    <string name="update">UPDATE</string>
    <string name="new">New:</string>
    <string name="view">View</string>
    <string name="add">ADD</string>
    <string name="addition">Add</string>
    <string name="choose_a_firebase_function">Choose a firebase function</string>
    <string name="view">View</string>
    <string name="update_">Update</string>
    <string name="delete">Delete</string>
    <string name="lname">Last Name:</string>
    <string name="new">New:</string>
</resources>